完成 completeApproval API；重构 username 为 userid。
